feat: create new notebook from recipe when there is no notebook created #247 (#323)
* feat: create new notebook from recipe when there is no notebook created

* fix: display in notebook mason

* fix: troubleshooting on adding recipes to notebook

* fix: random sentence and debugging random recipes

* fix: trunkate title in notebook recipe

* fix: api information

--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -1,7 +1,7 @@
   <div class="uk-cover-container uk-height-medium">
     <img src="<%= asset_path 'wallpapers/home_blured.jpg' %>" alt="cover" uk-cover>
     <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle">
-      <h1 class="title title-light uk-padding uk-padding-remove-bottom">Vous avez faim ?</h1>
+      <h1 class="title title-light uk-padding uk-padding-remove-bottom"><%= @sentence %></h1>
       <div class="uk-width-1-1 uk-padding uk-text-center">
         <%= simple_form_for :search,
                             url: search_path,
