Fix grammar in landing page with user feedback + App link in landing page (#326)
* feat: app link in landing page

* fix: translation

* fix: profile image upload

--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -2,10 +2,10 @@
 <div class="cover">
   <div class="uk-cover-container" uk-height-viewport  uk-parallax="blur: 10">
     <img src="<%= asset_path 'cover.jpg' %>" alt="cover" uk-cover>
-    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle cover-text-container">
+    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle cover-text-container uk-text-justify">
       <h1>Ensemble gaspillons moins, mangeons mieux.</h1>
-      <p class="uk-width-1-2@l uk-width-1-1@m uk-width-2-4@s uk-padding project-info">
-        Recipy est la première application à proposer des recettes personnalisées en réduisant le gaspillage alimentaire. En effet, Recipy propose à ses utilisateurs de découvrir de nouvelles recettes basées sur leurs goûts, en consommant de manière locale. Enfin, l’application permet à l’utilisateur de ne pas se soucier de sa liste de courses hebdomadaire, car elle directement générée et intégrée dans les outils d’aujourd’hui et de demain.
+      <p class="uk-width-1-2@l uk-width-1-1@m uk-width-2-4@s uk-padding project-info uk-text-center">
+        Recipy est la première application à proposer des recettes personnalisées en réduisant le gaspillage alimentaire. En effet, Recipy propose à ses utilisateurs de découvrir de nouvelles recettes basées sur leurs goûts tout en consommant de manière locale. Enfin, l’application permet à l’utilisateur de ne pas se soucier de sa liste de courses hebdomadaire car elle directement générée et intégrée dans les outils d’aujourd’hui et de demain.
       </p>
       <p class="uk-text-small">
         <a href="#concept" uk-scroll>Cliquez ici pour en savoir plus</a>
@@ -21,10 +21,10 @@
 
 <div id="concept">
   <div class="uk-section uk-section-large uk-section-secondary">
-    <div class="uk-container">
+    <div class="uk-container uk-text-justify">
       <h2 class="landing-title uk-margin">CONCEPT</h2>
       <p class="uk-text-small">
-        Recipy est votre nouveau compagnon pour la réalisation de tous vos plats au quotidien. Il vous assiste dans la trouvaille de nouveaux plats succulents et dans leur réalisation. Au-delà de tout cela, nous nous engageons à vous apprendre une nouvelle manière de consommer, plus respectueuse pour l’environnement tout en restant dans vos frais. En effet, Recipy vous propose tout au long du parcours en sa compagnie, d’effectuer les achats de vos produits manquants auprès de producteurs locaux partenaires. Recipy est connecté aux technologies d’aujourd’hui et de demain pour vous proposer tous les jours la manières la plus simple de rendre agréable des moments du quotidien : « que va-t-on manger cette semaine ? » ou encore « où ai-je donc mis ma liste de course ? ». Plus d'embarras, Recipy contient de nombreuses fonctionnalités pour faciliter votre vie de cuisinier amateur ou professionnel. Recipy va vous prouver qu’il peut être simple d’éviter le gaspillage et le tout, en mangeant mieux !
+        Recipy est votre nouveau compagnon pour la réalisation de tous vos plats au quotidien. Il vous assiste dans la découverte de nouveaux plats succulents et dans leur réalisation. De plus, nous nous engageons à vous apprendre une nouvelle manière de consommer plus respectueuse de l’environnement tout en restant dans vos frais. En effet, Recipy vous propose de vous compagnier lors des achats de vos produits manquants auprès de producteurs locaux partenaires. Recipy est connecté aux technologies d’aujourd’hui et de demain pour vous proposer tous les jours la manière la plus simple de rendre agréables des moments du quotidien : « que va-t-on manger cette semaine ? » ou encore « où ai-je donc mis ma liste de courses ? ». Plus d'embarras, grâce aux nombreuses de Recipy qui faciliteront votre vie de cuisinier amateur ou professionnel. Recipy va vous prouver qu’il peut être simple d’éviter le gaspillage tout en mangeant mieux !
       </p>
     </div>
   </div>
@@ -39,7 +39,7 @@
         </div>
         <div class="uk-width-1-3@m uk-text-center">
           <img data-src="<%= asset_path 'landing/cutlery.png' %>" alt="iphone" height="200" width="200" uk-img>
-          <p class="uk-text-lead uk-text-center">Qui donne aux novices la possibilité de réaliser des recettes simples, délicieuses, le tout avec des produits locaux.</p>
+          <p class="uk-text-lead uk-text-center">Qui donne aux novices la possibilité de réaliser des recettes simples, délicieuses avec des produits locaux.</p>
         </div>
         <div class="uk-width-1-3@m uk-text-center">
           <img data-src="<%= asset_path 'landing/waste.png' %>" alt="iphone" height="200" width="200" uk-img>
