--- a/app/views/shopping_lists/edit.html.erb
+++ b/app/views/shopping_lists/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="uk-width-xxlarge uk-align-center">
     <h2 class="title">Modifier ma liste de courses</h2>
 
-    <%= render 'edit_form', shopping_list: @shopping_list %>
+    <%= render 'form', shopping_list: @shopping_list %>
 
     <%= link_to t('shopping_list.go_back'), shopping_lists_path %>
 
