--- a/app/views/shopping_lists/show.html.erb
+++ b/app/views/shopping_lists/show.html.erb
@@ -1,8 +1,11 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 <div class="uk-container uk-padding">
   <h2 class="title">Liste de courses : "<%= @shopping_list.name %>"</h2>
   <div class="uk-align-center">
     <ul class="uk-list uk-list-bullet">
       <% @items.each do |key, value| %>
+        <i class="<%= ShoppingListIngredient.shelf_icons[key] %>"></i>
         <span class="uk-text-bold"><%= Ingredient.shelf_tags[key] %></span>
         <% value.each do |elem| %>
           <li>
@@ -15,8 +18,8 @@
         </br>
       <% end %>
     </ul>
-    <p class="uk-button uk-button-default"><%= link_to t("recipe.action.edit"), edit_shopping_list_path(@shopping_list) %></p>
-    <p class="uk-button uk-button-default"> <%= link_to t("recipe.action.destroy"), @shopping_list, method: :delete, data: {confirm: t("recipe.action.confirm")} %></p>
-    <p><%= link_to "Retour à mes listes de courses", shopping_lists_path , :class=>"uk-text-center uk-button uk-button-text"%></p>
+    <%= link_to t("recipe.action.edit"), edit_shopping_list_path(@shopping_list), class:"uk-button uk-button-secondary" %>
+      <%= link_to t("recipe.action.destroy"), @shopping_list, method: :delete, data: {confirm: t("recipe.action.confirm")}, class:"uk-button uk-button-danger" %>
+    <p><%= link_to "Retour à mes listes de courses", shopping_lists_path , class: "uk-text-center uk-button uk-button-default"%></p>
   </div>
 </div>
