--- a/app/views/meal_plans/show.html.erb
+++ b/app/views/meal_plans/show.html.erb
@@ -46,6 +46,8 @@
               </div>
             <% end %>
           </div>
+        </div>
+        <div class="uk-card uk-card-default <% if @day_plan.date == Date.today %> <%= "orange-card" %> <% end %> meal-card uk-child-width-1-1@s uk-child-width-auto@l" uk-grid>
           <div class="day-moment">
             <h5 class="title">Soir</h5>
           </div>
